# superconductor

./: .gitignore  README.md  pyproject.toml  superconductor-others-unnormalized.csv  superconductor-others.csv  superconductor-plot.py  superconductor.csv  superconductor.ipynb  superconductor.py
design-bench/: pyproject.toml
design-bench/design_bench/: __init__.py
design-bench/design_bench/oracles/sklearn/: __init__.py
diffusionlib/: pyproject.toml
diffusionlib/diffusionlib/: optimizer.py  sampler.py
diffusionlib/diffusionlib/util/: misc.py
