[tool.poetry]
name = "diffusion-research"
version = "0.1.0"
description = "Meta/super repository encapsulating my research on diffusion models and inverse problems"
authors = ["Ben Dowling <ben.dowling@icloud.com>"]
license = "LICENCE.md"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.8.19"
optax = "*"
equinox = "*"
ipykernel = "*"
ipywidgets = "*"
matplotlib = "*"
pandas = "*"

diffusionlib = {path = "diffusionlib", develop = true}
design-bench = {path = "design-bench", develop = true}

[tool.poetry.group.dev.dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff]

# E - pycodestyle error
# F - pyflakes
# I - isort
# N - pep8-naming
# W - pycodestyle warn
# UP - pyupgrade
# TODO: D - pydocstyle
select = ["E", "F", "I", "N", "W", "UP"]

ignore = [
    "F722" # forward-annotation-syntax-error; for jaxtyping
]

line-length = 100

[tool.ruff.per-file-ignores]
# Ignore module level import not at top of file
"notebooks/*.ipynb" = ["E402"]
